<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="empty">""</string>
    <string name="app_name">小云机器人</string>
    <string name="myname">Me</string>
    <string name="robotname">XiaoYun</string>
    
    <string name="et1_hint">"Input words here."</string>
    <string name="btn1_text">Send</string>
    
    <string name="AI_unknow">"Sorry, I don't know what you mean."</string>
    <string name="AI_hello">Hello! I am XiaoYun.</string>
    <string name="AI_LoadFileFailed">Load File Failed</string>
    <string name="AI_StringEMPTY">Please input words. @_@</string>
    
    <string name="menu_exit">Exit</string>
    <string name="menu_areyouwant2exit">Exit?</string>
    <string name="menu_help">How to use</string>
    <string name="menu_about">About XiaoYun</string>
    
    <string name="exit_yes">Yes! Now!</string>
    <string name="exit_no">"Oh!I'm wrong."</string>
    <string name="exit_context">Are you really want to exit?</string>
    
    <string name="about_context">XiaoYunRobot [Version]\nPaperAirplane\nProgrammer: Fython\nE-mail:fython@163.com\n\nWelcome to use this application!\nWelcome more suggestions.</string>
    <string name="about_contact">"Visit Fython's Blog"</string>
    <string name="help_visitus">"Visit Our Website"</string>
    <string name="help_title">What can I do?</string>
    
    <string name="dialogList_title">Choose a operate</string>
    <string name="copy_str">Copy</string>
    <string name="share_str">Share</string>
    
    <string name="shareinfo_left">"Hi! I'm using XiaoYun (http://www.papdt.info ) and chatting with it now. I'd like to share a chatlog with you \""</string>
    <string name="shareinfo_right">" \"."</string>
    <string name="how_to_share">Choose a share operate</string>
    
    <string name="internet_error">"Internet Error!"</string>
    <string name="version_least">"You're using least version."</string>
    <string name="update_found">Here is new version.</string>
    <string name="update_remote_version">Least version:</string>
    <string name="update_whats_new">"What's new:\n"</string>
    <string name="update_release_date">Release Date:</string>
    <string name="update_download">Download</string>
    <string name="update_nothanks">No, thanks.</string>
    
    <string name="voice_api_null">"Sorry, I couldn't hear what you said."</string>
    
    <string name="chk_set1">"Send message after speaking"</string>
    <string name="chk_set2">"Show splash screen"</string>
    <string name="chk_set3">"Auto check update"</string>
    <string name="setting_title">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="whatcanido">"What can I do?"</string>
    
</resources>